# SocketServer

./: .gitignore  CMakeLists.txt
socket-server/: CMakeLists.txt
socket-server/examples/: socket_client_example.cpp  socket_server_example.cpp  thread_pool_example.cpp
socket-server/include/: server_constants.h  server_constants.h.in  socket_server.h
socket-server/include/logging/: logging.h
socket-server/include/server/: error.h  request.h  socket.h  writer.h
socket-server/include/server/socket/: tcp_socket.h  tcp_socket_linux.h
socket-server/include/server/thread_pool/: queue.h  thread_pool.h
socket-server/include/server/writer/: tcp_writer.h
socket-server/src/socket/: tcp_socket_linux.cpp
socket-server/src/thread_pool/: thread_pool.cpp
socket-server/tests/: CMakeLists.txt  socketserver_test.cpp
